--- a/src/UI/About.xaml
+++ b/src/UI/About.xaml
@@ -31,7 +31,7 @@
                 </Grid.ColumnDefinitions>
 
                 <!-- LOGO -->
-                <Path Margin="6,0,2,0" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Info}"/>
+                <Path Margin="6,0,2,0" Data="{StaticResource Icon.Info}"/>
 
                 <!-- Title -->
                 <Label Grid.Column="1" Content="{StaticResource Text.About}" FontWeight="Light"/>
@@ -48,7 +48,7 @@
                         </Style>
                     </Button.Style>
 
-                    <Path Width="10" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Close}"/>
+                    <Path Width="10" Data="{StaticResource Icon.Close}"/>
                 </Button>
             </Grid>
 
@@ -62,7 +62,7 @@
                 </Grid.RowDefinitions>
 
                 <StackPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,6,0,0">
-                    <Path Width="64" Height="64" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Git}" Fill="{StaticResource Brush.Logo}"/>
+                    <Path Width="64" Height="64" Data="{StaticResource Icon.Git}" Fill="{StaticResource Brush.Logo}"/>
                 </StackPanel>
 
                 <Label Grid.Row="1" Content="{StaticResource Text.About.Title}" HorizontalContentAlignment="Center" VerticalContentAlignment="Bottom" FontSize="18" FontWeight="Bold"/>
