--- a/src/UI/CreateBranch.xaml
+++ b/src/UI/CreateBranch.xaml
@@ -33,7 +33,7 @@
 
         <Label Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" Content="{StaticResource Text.CreateBranch.BasedOn}"/>
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
-            <Path x:Name="basedOnType" Width="12" Style="{StaticResource Style.Icon}"/>
+            <Path x:Name="basedOnType" Width="12"/>
             <TextBlock x:Name="basedOnDesc" Padding="4,0,0,0" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center" Text="master"/>
         </StackPanel>
 
