--- a/src/UI/CreateTag.xaml
+++ b/src/UI/CreateTag.xaml
@@ -27,7 +27,7 @@
 
         <Label Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Content="{StaticResource Text.CreateTag.BasedOn}"/>
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
-            <Path Width="12" x:Name="basedOnType" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Commit}"/>
+            <Path Width="12" x:Name="basedOnType" Data="{StaticResource Icon.Commit}"/>
             <TextBlock x:Name="basedOnDesc" Padding="4,0,0,0" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center" Text="xxx"/>
         </StackPanel>
 
