--- a/src/UI/InteractiveRebase.xaml
+++ b/src/UI/InteractiveRebase.xaml
@@ -51,7 +51,7 @@
                 <StackPanel Grid.Column="0" Orientation="Horizontal">
                     <Path
                         Width="20" Height="20" Margin="6,-1,2,0"
-                        Style="{StaticResource Style.Icon}" 
+                        
                         Data="{StaticResource Icon.Git}"
                         Fill="{StaticResource Brush.Logo}"
                         WindowChrome.IsHitTestVisibleInChrome="True"
@@ -62,10 +62,10 @@
                 <!-- Options -->
                 <StackPanel Grid.Column="2" Orientation="Horizontal" WindowChrome.IsHitTestVisibleInChrome="True">
                     <Button Click="Minimize" Width="32" Style="{StaticResource Style.Button.HighlightHover}">
-                        <Path Width="10" Height="10" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Minimize}"/>
+                        <Path Width="10" Height="10" Data="{StaticResource Icon.Minimize}"/>
                     </Button>
                     <Button Click="MaximizeOrRestore" Width="32" Style="{StaticResource Style.Button.HighlightHover}">
-                        <Path Width="10" Height="10" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Maximize}"/>
+                        <Path Width="10" Height="10" Data="{StaticResource Icon.Maximize}"/>
                     </Button>
                     <Button Click="Quit" Width="32">
                         <Button.Style>
@@ -78,7 +78,7 @@
                             </Style>
                         </Button.Style>
 
-                        <Path Width="10" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Close}"/>
+                        <Path Width="10" Data="{StaticResource Icon.Close}"/>
                     </Button>
                 </StackPanel>
             </Grid>
@@ -117,7 +117,7 @@
                                                 <ColumnDefinition Width="60"/>
                                                 <ColumnDefinition Width="*"/>
                                             </Grid.ColumnDefinitions>
-                                            <Path Grid.Column="0" Width="12" Height="12" Margin="4,0,0,0" Fill="{Binding Theme}" Style="{StaticResource Style.Icon}" Data="M 0,0 A 180,180 180 1 1 1,1 Z"/>
+                                            <Path Grid.Column="0" Width="12" Height="12" Margin="4,0,0,0" Fill="{Binding Theme}" Data="M 0,0 A 180,180 180 1 1 1,1 Z"/>
                                             <Label Grid.Column="1" Content="{Binding Title}" Padding="4,0"/>
                                             <Label Grid.Column="2" Content="{Binding Desc}" Foreground="{StaticResource Brush.FG2}" FontSize="11" Padding="4,0"/>
                                         </Grid>
@@ -149,11 +149,11 @@
                                 Orientation="Horizontal"
                                 Margin="4,0">
                                 <Button Click="MoveUp" ToolTip="{StaticResource Text.InteractiveRebase.MoveUp}">
-                                    <Path Width="12" Height="12" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.MoveUp}"/>
+                                    <Path Width="12" Height="12" Data="{StaticResource Icon.MoveUp}"/>
                                 </Button>
 
                                 <Button Click="MoveDown" ToolTip="{StaticResource Text.InteractiveRebase.MoveDown}" Margin="4,0,0,0">
-                                    <Path Width="12" Height="12" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.MoveDown}"/>                                    
+                                    <Path Width="12" Height="12" Data="{StaticResource Icon.MoveDown}"/>                                    
                                 </Button>
                             </StackPanel>
                         </Grid>
@@ -199,11 +199,11 @@
 
                 <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="4,0,24,0">
                     <Label Grid.Column="0" Content="{StaticResource Text.InteractiveRebase.Target}"/>
-                    <Path Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Branch}"/>
+                    <Path Data="{StaticResource Icon.Branch}"/>
                     <Label x:Name="branch"/>
                     
                     <Label Grid.Column="2" Content="{StaticResource Text.InteractiveRebase.On}" Margin="8,0,0,0"/>
-                    <Path Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Commit}"/>
+                    <Path Data="{StaticResource Icon.Commit}"/>
                     <Label x:Name="on"/>
                 </StackPanel>
 
