--- a/src/UI/Merge.xaml
+++ b/src/UI/Merge.xaml
@@ -25,13 +25,13 @@
 
         <Label Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" Content="{StaticResource Text.Merge.Source}"/>
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
-            <Path Width="12" Height="12" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Branch}"/>
+            <Path Width="12" Height="12" Data="{StaticResource Icon.Branch}"/>
             <TextBlock x:Name="sourceBranch" Padding="4,0,0,0" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center"/>
         </StackPanel>
         
         <Label Grid.Row="3" Grid.Column="0" HorizontalAlignment="Right" Content="{StaticResource Text.Merge.Into}"/>
         <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal">
-            <Path Width="12" Height="12" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Branch}"/>
+            <Path Width="12" Height="12" Data="{StaticResource Icon.Branch}"/>
             <TextBlock x:Name="targetBranch" Padding="4,0,0,0" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center"/>
         </StackPanel>
 
