--- a/src/UI/Push.xaml
+++ b/src/UI/Push.xaml
@@ -34,7 +34,7 @@
             <ComboBox.ItemTemplate>
                 <DataTemplate DataType="{x:Type git:Branch}">
                     <StackPanel Orientation="Horizontal" Height="20">
-                        <Path Margin="4,0,0,0" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Branch}"/>
+                        <Path Margin="4,0,0,0" Data="{StaticResource Icon.Branch}"/>
                         <TextBlock Text="{Binding Name}" Padding="8,0,0,0" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center"/>
                     </StackPanel>
                 </DataTemplate>
@@ -49,7 +49,7 @@
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Height="20">
-                        <Path Margin="4,0,0,0" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Remote}"/>
+                        <Path Margin="4,0,0,0" Data="{StaticResource Icon.Remote}"/>
                         <TextBlock Text="{Binding}" Padding="8,0,0,0" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center"/>
                     </StackPanel>
                 </DataTemplate>
@@ -63,7 +63,7 @@
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Height="20">
-                        <Path Margin="4,0,0,0" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Branch}"/>
+                        <Path Margin="4,0,0,0" Data="{StaticResource Icon.Branch}"/>
                         <TextBlock Text="{Binding}" Padding="8,0,0,0" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center"/>
                     </StackPanel>
                 </DataTemplate>
