--- a/src/UI/RenameBranch.xaml
+++ b/src/UI/RenameBranch.xaml
@@ -26,7 +26,7 @@
 
         <Label Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" Content="{StaticResource Text.RenameBranch.Target}"/>
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
-            <Path Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Branch}"/>
+            <Path Data="{StaticResource Icon.Branch}"/>
             <TextBlock x:Name="txtOldName" Padding="4,0,0,0" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center"/>
         </StackPanel>
 
